# hailo-apps

doc/user_guide/: running_applications.md
hailo_apps/cpp/: README.md
hailo_apps/cpp/common/: resources_manager.cpp
hailo_apps/cpp/realtime_whisper_chat/: CMakeLists.txt  README.md  realtime_whisper_chat.cpp
hailo_apps/cpp/simple_whisper_chat/: CMakeLists.txt  README.md  simple_whisper_chat.cpp
